Create Django project and app

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
   app:
     build:
       context: .
+    ports:
+      - "8000:8000"
     volumes:
       - ./app:/app
-    command: python hello_world.py
+    command: python manage.py runserver 0.0.0.0:8000
     environment:
       - PYTHONUNBUFFERED=1
-      
